test/e2e/conformance/tests/httproute-match-pseudo-headers.yaml
# Copyright (c) 2022 Alibaba Group Holding Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # exact matching
    higress.io/exact-match-pseudo-header-authority: "test.foo.com"
  name: httproute-match-pseudo-headers-1
  namespace: higress-conformance-infra
spec:
  ingressClassName: higress
  rules:
    - host: "*.foo.com"
      http:
        paths:
          - pathType: Prefix
            path: "/v1"
            backend:
              service:
                name: infra-backend-v1
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # regex matching
    higress.io/regex-match-pseudo-header-authority: "test.+\\.foo\\.com"
  name: httproute-match-pseudo-headers-2
  namespace: higress-conformance-infra
spec:
  ingressClassName: higress
  rules:
    - host: "*.foo.com"
      http:
        paths:
          - pathType: Prefix
            path: "/v2"
            backend:
              service:
                name: infra-backend-v2
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # prefix matching
    higress.io/prefix-match-pseudo-header-path: "/v3/bar"
  name: httproute-match-pseudo-headers-3
  namespace: higress-conformance-infra
spec:
  ingressClassName: higress
  rules:
    - host: "*.foo.com"
      http:
        paths:
          - pathType: Prefix
            path: "/v3"
            backend:
              service:
                name: infra-backend-v3
                port:
                  number: 8080
